--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #E6E6E6;
+            background-color: #cdd6c0;
             color: #333;
             justify-content: center;
             align-items: center;
@@ -56,11 +56,11 @@
             margin-left: 5px;
         }
         .rsvp, .event-details, .gift-info {
-            background-color: #CAF4FF;
+            background-color: #cdd6c0;
         }
         .header {
             text-align: center;
-            background-color: #CAF4FF;
+            background-color: #cdd6c0;
             justify-content: center;
             align-items: center;
             margin: 0;
@@ -133,7 +133,7 @@
             cursor: pointer;
         }
         .footer {
-            background-color: #EEEEEE;
+            background-color: #cdd6c0;
             padding: 10px;
             text-align: center;
         }
@@ -254,7 +254,7 @@
 
             setTimeout(() => {
                 flower.remove();
-            }, 5000); // Remove flower after animation completes
+            }, 10000); // Remove flower after animation completes
         }
 
         function createFlower2() {
@@ -267,7 +267,7 @@
 
             setTimeout(() => {
                 flower.remove();
-            }, 5000); // Remove flower after animation completes
+            }, 10000); // Remove flower after animation completes
         }
 
         function startFlowerAnimation() {
